--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
   <div class="nav w-nav" data-animation="default" data-collapse="medium" data-duration="400">
     <div class="nav-content w-container"><a class="brand w-nav-brand" href="#" id="homepage"><h1 class="brandtext">Qinwei Zhu</h1></a>
-      <nav class="nav-menu w-nav-menu" role="navigation"><a class="navlink w-nav-link" href="#homepage">Project</a><a class="navlink w-nav-link" href="about.html">About</a><a class="navlink w-nav-link" href="resume/resume_QinweiZhu.pdf">Resume</a>
+      <nav class="nav-menu w-nav-menu" role="navigation"><a class="navlink w-nav-link" href="#project-anchor">Project</a><a class="navlink w-nav-link" href="#blog-anchor">Blog</a><a class="navlink w-nav-link" href="about.html">About</a><a class="navlink w-nav-link" href="resume/resume_QinweiZhu.pdf">Resume</a>
       </nav>
       <div class="menu-button w-nav-button">
         <div class="menu-icon w-icon-nav-menu"></div>
@@ -49,8 +49,9 @@
     <div class="intro-container w-container">
       <h1 class="introemoji">🎉</h1>
         <h1 class="intro-text1">I am an innovative problem-solver, an active user advocator, and a versatile design implementer.</h1>
-        <p class="intro-text2">Hi, I'm Qinwei! I’m a master's student majoring in <span class="intro-highlight">Information Science</span> at <span class="intro-highlight">Cornell University</span>. I had experiences of interning in <span class="intro-highlight">IBM</span> and a <span class="intro-highlight">Startup</span> called Bri Studio. I'm currently <span class="intro-highlight">looking for a full-time position as a product designer</span>.</p> 
+        <p class="intro-text2">Hi, I'm Qinwei! I’m a master's student majoring in <span class="intro-highlight">Information Science</span> at <span class="intro-highlight">Cornell University</span>. I interned at <span class="intro-highlight">IBM</span> and as a UX designer and I am working as an student designer for a <span class="intro-highlight">Cornell startup</span>. I'm currently <span class="intro-highlight">looking for a full-time position as a product designer</span>.</p> 
       <p class="section-title">------
+                      <a class="anchor" id="project-anchor"></a>
         <br>With <span class="intro-highlight">my projects</span>,&nbsp;I'm iterating myself to become a better designer.
       </p>
     </div>
@@ -95,6 +96,48 @@
       <div class="w-col w-col-1"></div>
     </div>
   </div>
+    <div class="w-container">
+        <a class="anchor" id="blog-anchor"></a>
+        <p class="section-title">------<br>In <span class="intro-highlight">my blog</span>,&nbsp; I give consideration to complex problems in UX design:</p>
+        <div class="blog-divider"></div>
+        <div class="blog-box">
+            <a href="https://medium.com/@qinweizhu/critique-and-redesign-uploading-and-managing-images-on-slack-ios-96dd7e86f519#.egmo76fel">
+            <h3 class="blog-title" id="blog1">
+                Critique and Redesign: Uploading and managing images on Slack(iOS)   </h3>
+
+            </h3>
+            <p class="blog-info">Mar 14・4 min read</p>
+            </a>
+        </div>
+        <div class="blog-divider"></div>
+        <div class="blog-box">
+            <a href="https://medium.com/@qinweizhu/i-love-playful-experiences-965bd6a483a8#.ee6e5sv7l">
+            <h3 class="blog-title"  id="blog2">
+                Create delightful experience</h3>
+            <p class="blog-info">Feb 12・3 min read</p>
+            </a>
+        </div>
+        <div class="blog-divider"></div>
+        <div class="blog-box">
+            <a href="https://medium.com/@qinweizhu/design-for-the-faceless-mass-db433f0c8bd3#.5hqirrq7z">
+            <h3 class="blog-title"  id="blog3">
+                    Design for the faceless mass
+            </h3>
+            <p class="blog-info">Feb 12・3 min read</p>
+            </a>
+        </div>
+        <div class="blog-divider"></div>
+                <div class="blog-box">
+            <a href="https://medium.com/@qinweizhu/as-a-designer-i-speak-up-1505da0a806#.qrdi19hmc">
+            <h3 class="blog-title"  id="blog4">
+                    As a designer, I speak up
+            </h3>
+            <p class="blog-info">Feb 12・3 min read</p>
+            </a>
+        </div>
+        <div class="blog-divider"></div>
+    </div>
+        
   <div>
     <div class="w-container">
       <p class="section-title">------
