open in a new tab

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <p class="section-title">------<br>In <span class="intro-highlight">my blog</span>,&nbsp; I give consideration to complex problems in UX design:</p>
         <div class="blog-divider"></div>
         <div class="blog-box">
-            <a href="https://medium.com/@qinweizhu/critique-and-redesign-uploading-and-managing-images-on-slack-ios-96dd7e86f519#.egmo76fel">
+            <a target="_blank" href="https://medium.com/@qinweizhu/critique-and-redesign-uploading-and-managing-images-on-slack-ios-96dd7e86f519#.egmo76fel">
             <h3 class="blog-title" id="blog1">
                 Critique and Redesign: Uploading and managing images on Slack(iOS)   </h3>
 
@@ -111,7 +111,7 @@
         </div>
         <div class="blog-divider"></div>
         <div class="blog-box">
-            <a href="https://medium.com/@qinweizhu/i-love-playful-experiences-965bd6a483a8#.ee6e5sv7l">
+            <a target="_blank" href="https://medium.com/@qinweizhu/i-love-playful-experiences-965bd6a483a8#.ee6e5sv7l">
             <h3 class="blog-title"  id="blog2">
                 Create delightful experience</h3>
             <p class="blog-info">Feb 12・3 min read</p>
@@ -119,7 +119,7 @@
         </div>
         <div class="blog-divider"></div>
         <div class="blog-box">
-            <a href="https://medium.com/@qinweizhu/design-for-the-faceless-mass-db433f0c8bd3#.5hqirrq7z">
+            <a target="_blank" href="https://medium.com/@qinweizhu/design-for-the-faceless-mass-db433f0c8bd3#.5hqirrq7z">
             <h3 class="blog-title"  id="blog3">
                     Design for the faceless mass
             </h3>
@@ -128,7 +128,7 @@
         </div>
         <div class="blog-divider"></div>
                 <div class="blog-box">
-            <a href="https://medium.com/@qinweizhu/as-a-designer-i-speak-up-1505da0a806#.qrdi19hmc">
+            <a target="_blank" href="https://medium.com/@qinweizhu/as-a-designer-i-speak-up-1505da0a806#.qrdi19hmc">
             <h3 class="blog-title"  id="blog4">
                     As a designer, I speak up
             </h3>
