--- a/index.html
+++ b/index.html
@@ -98,26 +98,32 @@
   </div>
     <div class="w-container">
         <a class="anchor" id="blog-anchor"></a>
-        <p class="section-title">------<br>In <span class="intro-highlight">my blog</span>,&nbsp; I give consideration to complex problems in UX design:</p>
+        <p class="section-title">------<br>In <span class="intro-highlight"><a style="color: #464646" href="https://medium.com/@qinweizhu" target="_blank">my blog</a></span> I give consideration to complex problems in UX design:</p>
+        <div class="blog-divider"></div>
+        <div class="blog-box">
+            <a target="_blank" href="https://medium.com/@qinweizhu/redesign-the-pace-of-reading-a-question-page-in-quora-10c38b8df874">
+            <h3 class="blog-title" id="blog1">
+                Redesign the Pace of Reading a Question Page in Quora</h3>
+            <p class="blog-info">Mar 28・4 min read</p>
+            </a>
+        </div>
         <div class="blog-divider"></div>
         <div class="blog-box">
             <a target="_blank" href="https://medium.com/@qinweizhu/critique-and-redesign-uploading-and-managing-images-on-slack-ios-96dd7e86f519#.egmo76fel">
-            <h3 class="blog-title" id="blog1">
+            <h3 class="blog-title" id="blog2">
                 Critique and Redesign: Uploading and managing images on Slack(iOS)   </h3>
-
-            </h3>
-            <p class="blog-info">Mar 14・4 min read</p>
+            <p class="blog-info">Mar 26・4 min read</p>
             </a>
         </div>
         <div class="blog-divider"></div>
         <div class="blog-box">
             <a target="_blank" href="https://medium.com/@qinweizhu/i-love-playful-experiences-965bd6a483a8#.ee6e5sv7l">
-            <h3 class="blog-title"  id="blog2">
+            <h3 class="blog-title"  id="blog4">
                 Create delightful experience</h3>
             <p class="blog-info">Feb 12・3 min read</p>
             </a>
         </div>
-        <div class="blog-divider"></div>
+        <!-- <div class="blog-divider"></div>
         <div class="blog-box">
             <a target="_blank" href="https://medium.com/@qinweizhu/design-for-the-faceless-mass-db433f0c8bd3#.5hqirrq7z">
             <h3 class="blog-title"  id="blog3">
@@ -134,7 +140,7 @@
             </h3>
             <p class="blog-info">Feb 12・3 min read</p>
             </a>
-        </div>
+        </div> -->
         <div class="blog-divider"></div>
     </div>
         
