--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="w-col w-col-1"></div>
     </div>
   </div>
-  <div class="project-4">
+<!--   <div class="project-4">
     <div class="project-row w-row">
       <div class="w-col w-col-1"></div>
       <div class="w-col w-col-5"><img class="project1-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/gallery.png" srcset="images/gallery-p-500x291.png 500w, images/gallery-p-800x465.png 800w, images/gallery-p-1080x628.png 1080w, images/gallery-p-1600x930.png 1600w, images/gallery.png 1927w">
@@ -95,7 +95,7 @@
       </div>
       <div class="w-col w-col-1"></div>
     </div>
-  </div>
+  </div> -->
     <div class="w-container">
         <a class="anchor" id="blog-anchor"></a>
         <p class="section-title">------<br>In <span class="intro-highlight"><a style="color: #464646" href="https://medium.com/@qinweizhu" target="_blank">my blog</a></span> I give consideration to complex problems in UX design:</p>
