--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="blog-box">
             <a target="_blank" href="https://medium.com/@qinweizhu/redesign-the-pace-of-reading-a-question-page-in-quora-10c38b8df874">
             <h3 class="blog-title" id="blog1">
-                Redesign the Pace of Reading a Question Page in Quora</h3>
+                Redesign the Pace of Reading in Quora</h3>
             <p class="blog-info">Mar 28・4 min read</p>
             </a>
         </div>
