--- a/witus.html
+++ b/witus.html
@@ -91,21 +91,20 @@
       <h4 class="proj-section-title">Problem</h4>
       <blockquote class="quote"><span class="quote-text">International students find it hard to find work authorization information on online job searching platforms.</span>
       </blockquote>
-      <p class="proj-text">Last year, my friend lost her job in a world class company she stayed for 1 year because the company is not E-Verified to extend her OPT. Though it sounds unfamiliar to most U.S. citizen, work authorization information is crucial to international students because they need to find employers that are willing to sponsor their visa. Specially, for STEM students, they need to find E-Verified employers that are able to extend their OPT to 28 months. But most mainstream job searching platforms do not have the work authorization information for international students.</p><img sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" src="images/Artboard.png" srcset="images/Artboard-p-500x208.png 500w, images/Artboard-p-800x332.png 800w, images/Artboard-p-1080x448.png 1080w, images/Artboard.png 1215w">
+      <p class="proj-text">Work authorization is essential for international students to work in the U.S. However, the current online job hunting platforms mostly lack of this information on their job postings page. This not only causes international students' stuggling of finding the information, but also a waste of time for both employers and employees to process without reaching an agreement on whether to provide work authorization.</p>
+        <img sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" src="images/Artboard.png" srcset="images/Artboard-p-500x208.png 500w, images/Artboard-p-800x332.png 800w, images/Artboard-p-1080x448.png 1080w, images/Artboard.png 1215w">
       <div class="proj-pic-title">- Work authorization info on existing platforms -</div>
+        <h4 class="proj-section-title">Hypothesis</h4>
+      <blockquote class="quote"><span class="quote-text">Improving the transparency of work authorization information will make the job hunting experience happier for students and also help companies to lower the costs of hiring.</span>
+      </blockquote>
+        <img sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" src="images/market.png">
+      <div class="proj-pic-title">- Define Opportunity for the Product -</div>
       <h4 class="proj-section-title">User Research</h4>
-      <blockquote class="quote"><span class="quote-text">Bridge the information gap between users, companies and the government.</span>
+      <blockquote class="quote"><span class="quote-text">Understand what are the pain points through the user journey and what are some core problems to solve.</span>
       </blockquote>
       <p class="proj-text">Interviewing 5 participants who are all STEM major international students at Cornell and are all actively looking for jobs, we introduced our persona <span class="intro-highlight">Lilly Li</span> and instilled our opportunities:</p>
+        <img sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" src="images/witus-card.png" srcset="images/witus-card-p-500x263.png 500w, images/witus-card-p-800x421.png 800w, images/witus-card-p-1080x568.png 1080w, images/witus-card.png 1448w">
       <div class="proj-tab w-tabs">
-        <div class="w-tab-menu">
-          <a class="proj-tab-link w--current w-inline-block w-tab-link" data-w-tab="Tab 1">
-            <div>Key Findings</div>
-          </a>
-          <a class="proj-tab-link w-inline-block w-tab-link" data-w-tab="Tab 2">
-            <div>Process</div>
-          </a>
-        </div>
         <div class="w-tab-content">
           <div class="proj-tab-pane w--tab-active w-tab-pane" data-w-tab="Tab 1">
             <div class="w-row witus-research-row">
@@ -135,16 +134,16 @@
                 <p class="proj-text">How might we provide a time-saving and comfortable way to acquire information form companies?</p>
               </div>
             </div>
-            <div class="proj-pic-title">- Points from the User Research -</div>
+            <div class="proj-pic-title">- Key Points from the User Research -</div>
           </div>
           <div class="w-tab-pane" data-w-tab="Tab 2"><img sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" src="images/witus-card.png" srcset="images/witus-card-p-500x263.png 500w, images/witus-card-p-800x421.png 800w, images/witus-card-p-1080x568.png 1080w, images/witus-card.png 1448w">
           </div>
         </div>
       </div>
       <h4 class="proj-section-title">Initial Approach</h4>
-      <blockquote class="quote"><span class="quote-text">The safest plan is not always the best plan.</span>
+      <blockquote class="quote"><span class="quote-text">Provide a job posting platform that has work authorization information.</span>
       </blockquote>
-      <p class="proj-text">We came up with job posting platform for international students. Our initial design has 4 basic ideas:</p>
+      <p class="proj-text">After discussing around 100 ideas that the group came up with, we agreed on creating a job posting platform specially for international students. Our initial design has 4 basic ideas:</p>
       <ul class="proj-list">
         <li class="proj-list-item">Visualized Educational Content of Work Authorization information</li>
         <li class="proj-list-item">Job posting list that are searchable and filterable by sponsorship and E-Verify</li>
@@ -162,7 +161,10 @@
         </div>
       </div>
       <div class="proj-pic-title">- Paper Prototype Based on 4 Core Ideas -</div>
-      <p class="proj-text">We then showed the paper prototype to another 5 valid users. Unfortunately, the feedbacks we got are mostly negative：</p>
+        <h4 class="proj-section-title">User Testing Findings</h4>
+        <blockquote class="quote"><span class="quote-text">Users liked our web browser extension but were skeptical about the reliability of our source of infomarmation and also how we could compete with other existing success platforms.</span>
+      </blockquote>
+      <p class="proj-text">We gathered both nagative and postive feedback about our design.</p>
       <ol class="proj-list">
         <li class="proj-list-item"><span class="proj-highlight">"How can you ensure the job postings on your platform are reliable and up-to-date?"<br xmlns="http://www.w3.org/1999/xhtml"></span><span class="witus-ia-conclusion">We realized it's a lot of work to operate a platform that covers all the postings.</span>
         </li>
@@ -175,6 +177,7 @@
         <li class="proj-list-item"><span class="proj-highlight">"I really like the browser extension, can you develop it right away?"<br xmlns="http://www.w3.org/1999/xhtml"></span><span class="witus-ia-conclusion">I am glad we finally got some compliments.:)</span>
         </li>
       </ol>
+
       <h4 class="proj-section-title">New Approach </h4>
       <blockquote class="quote"><span class="quote-text">Deeper understanding of the user brings us the opportunity of supporting user's behavior rather than changing it.</span>
       </blockquote>
