--- a/witus.html
+++ b/witus.html
@@ -92,13 +92,21 @@
       <blockquote class="quote"><span class="quote-text">International students find it hard to find work authorization information on online job searching platforms.</span>
       </blockquote>
       <p class="proj-text">Work authorization is essential for international students to work in the U.S. However, the current online job hunting platforms mostly lack of this information on their job postings page. This not only causes international students' stuggling of finding the information, but also a waste of time for both employers and employees to process without reaching an agreement on whether to provide work authorization.</p>
-        <img sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" src="images/Artboard.png" srcset="images/Artboard-p-500x208.png 500w, images/Artboard-p-800x332.png 800w, images/Artboard-p-1080x448.png 1080w, images/Artboard.png 1215w">
+       <h4 class="proj-section-title">Market Research</h4>
+      <blockquote class="quote"><span class="quote-text">Existing platforms each has its merits and limitations.</span></blockquote>
+      <p class="proj-text">Users mainly use three kinds of platforms for job hunting: job posting platfroms, companies' websites, university career website. We choosed LinkedIn Jobs, Google Career and Cornell Handshake to investigate.</p>
+      <ul class="proj-list">
+        <li class="proj-list-item">LinkedIn Jobs: Valuable network, large amount of job postings. Low HR responding rate. No work authorization information.</li>
+        <li class="proj-list-item">Google Career: Reliable job postings. Low HR responding rate. No work authorization information.</li>
+        <li class="proj-list-item">Cornell Handshake: High HR responding rate. Very limited job postings. Some provide work authorization information.</li>
+      </ul>
+      <img sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" src="images/Artboard.png" srcset="images/Artboard-p-500x208.png 500w, images/Artboard-p-800x332.png 800w, images/Artboard-p-1080x448.png 1080w, images/Artboard.png 1215w">
       <div class="proj-pic-title">- Work authorization info on existing platforms -</div>
+      <img sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" src="images/market.png">
+      <div class="proj-pic-title">- Define Opportunity for the Product -</div>
         <h4 class="proj-section-title">Hypothesis</h4>
       <blockquote class="quote"><span class="quote-text">Improving the transparency of work authorization information will make the job hunting experience happier for students and also help companies to lower the costs of hiring.</span>
       </blockquote>
-        <img sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" src="images/market.png">
-      <div class="proj-pic-title">- Define Opportunity for the Product -</div>
       <h4 class="proj-section-title">User Research</h4>
       <blockquote class="quote"><span class="quote-text">Understand what are the pain points through the user journey and what are some core problems to solve.</span>
       </blockquote>
@@ -146,8 +154,8 @@
       <p class="proj-text">After discussing around 100 ideas that the group came up with, we agreed on creating a job posting platform specially for international students. Our initial design has 4 basic ideas:</p>
       <ul class="proj-list">
         <li class="proj-list-item">Visualized Educational Content of Work Authorization information</li>
-        <li class="proj-list-item">Job posting list that are searchable and filterable by sponsorship and E-Verify</li>
-        <li class="proj-list-item">Let users to write about their experience of E-Verify and sponsorship on job postings.</li>
+        <li class="proj-list-item">Job posting list that are searchable and filterable by sponsorship and E-Verify information.</li>
+        <li class="proj-list-item">Let users to "crowdsource" their experience of E-Verify and sponsorship on job postings.</li>
         <li class="proj-list-item">Provide a browser extension to allow users check E-verify information on job listing page on other platforms.</li>
       </ul>
       <div class="w-row witus-ia-row">
@@ -161,14 +169,11 @@
         </div>
       </div>
       <div class="proj-pic-title">- Paper Prototype Based on 4 Core Ideas -</div>
-        <h4 class="proj-section-title">User Testing Findings</h4>
-        <blockquote class="quote"><span class="quote-text">Users liked our web browser extension but were skeptical about the reliability of our source of infomarmation and also how we could compete with other existing success platforms.</span>
+        <h4 class="proj-section-title">Test the Initial Approach</h4>
+        <blockquote class="quote"><span class="quote-text">Users liked our web browser extension but were skeptical about the reliability of our sources of infomarmation and also how we could compete with other existing successful platforms.</span>
       </blockquote>
-      <p class="proj-text">We gathered both nagative and postive feedback about our design.</p>
       <ol class="proj-list">
         <li class="proj-list-item"><span class="proj-highlight">"How can you ensure the job postings on your platform are reliable and up-to-date?"<br xmlns="http://www.w3.org/1999/xhtml"></span><span class="witus-ia-conclusion">We realized it's a lot of work to operate a platform that covers all the postings.</span>
-        </li>
-        <li class="proj-list-item"><span class="proj-highlight">"I didn't get the vote for E-Verify, the vote can be outdated and thus it won't make any sense."<br xmlns="http://www.w3.org/1999/xhtml"></span><span class="witus-ia-conclusion">Even though voting is a simple way in terms of user interaction, it did cause the problem of votes being outdated.</span>
         </li>
         <li class="proj-list-item"><span class="proj-highlight">"Are you going to contact HR to verify the sponsorship information? Can I trust your source?"<br xmlns="http://www.w3.org/1999/xhtml"></span><span class="witus-ia-conclusion">Unfortunately, sponsorship information can change base on different candidates and different positions inside a company, and thus it is hard to verify without the company's announcement.</span>
         </li>
@@ -179,40 +184,44 @@
       </ol>
 
       <h4 class="proj-section-title">New Approach </h4>
-      <blockquote class="quote"><span class="quote-text">Deeper understanding of the user brings us the opportunity of supporting user's behavior rather than changing it.</span>
+      <blockquote class="quote"><span class="quote-text">Realizing our initial design didn't work well, we revisited our interview notes to find new opportunities.</span>
       </blockquote>
-      <p class="proj-text">To find new opportunities, we revisited our interview note and iterated our persona. This time, I noticed two interesting fact that we ignored before:&nbsp;</p>
+<!--       <p class="proj-text">To find new opportunities, we revisited our interview note and iterated our persona. This time, I noticed two interesting facts that we ignored before:&nbsp;</p> -->
       <div class="w-row witus-research-row">
         <div class="w-col w-col-4 witus-column"><img sizes="(max-width: 525px) 96vw, (max-width: 767px) 504px, (max-width: 991px) 249.328125px, 319.984375px" src="images/witus8.png" srcset="images/witus8-p-500x410.png 500w, images/witus8.png 504w">
         </div>
         <div class="w-col w-col-8 witus-column witus-column-right">
-          <p class="proj-text"><span class="proj-highlight">Users look for job postings on multiple platforms, but then went back to companies' official website to apply.</span>
+          <p class="proj-text"><span class="proj-highlight">Users looked for job postings on multiple platforms, but then went back to companies' official website to apply.</span>
           </p><img class="arrow-img" src="images/arrow.png">
-          <p class="proj-text">Instead of building another platform to be a competition, how might we support their behavior on existing platforms?</p>
+          <p class="proj-text">Instead of building another platform to compete with other existing platforms, how might we support their actions on existing platforms?</p>
         </div>
       </div>
       <div class="w-row witus-research-row">
         <div class="w-col w-col-4 witus-column"><img sizes="(max-width: 525px) 96vw, (max-width: 767px) 504px, (max-width: 991px) 249.328125px, 319.984375px" src="images/witus9.png" srcset="images/witus9-p-500x410.png 500w, images/witus9.png 504w">
         </div>
         <div class="w-col w-col-8 witus-column witus-column-right">
-          <p class="proj-text"><span class="proj-highlight">Users can apply for more than 100 jobs at the same time. They use Excel and Bookmarks to manage it.</span>
+          <p class="proj-text"><span class="proj-highlight">Users can apply for more than 100 jobs at the same time. But they used Excel and Bookmarks to manage it.</span>
           </p><img class="arrow-img" src="images/arrow.png">
           <p class="proj-text">How might we provide more effective ways to help them manage the process of job application?</p>
         </div>
       </div>
       <div class="proj-pic-title">- Two Ignored Facts -</div>
-      <p class="proj-text">Looking at user behavior for one more time, I believe our red sea lies in supporting their job searching on official website and famous job searching platform. I then got inspiration from Pinterest and proposed this new idea to my team:</p>
+      <!-- <p class="proj-text">Looking at user behavior for one more time, I believe our red sea lies in supporting their job searching on official website and famous job searching platform. I then got inspiration from Pinterest and proposed this new idea to my team:</p>
       <p class="proj-text">Treat our browser extension as the core and the entrance; allow users to pin interested jobs to our platform; on our platform, provide a management tool to help international students manage their job application.
-        <br>Give up collecting job lists ourselves, instead, as users pin jobs from other website, we can gather all the entrance and have a bottom-to-top list of job postings that works for international students.</p>
-      <p class="proj-text">In short, the goal of the new design is:</p>
-      <blockquote class="quote quote-large">Being supportive!</blockquote>
-      <div class="witus-background-box"><img sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" src="images/new-model.png" srcset="images/new-model-p-500x335.png 500w, images/new-model-p-800x535.png 800w, images/new-model-p-1080x722.png 1080w, images/new-model.png 1448w">
+        <br>Give up collecting job lists ourselves, instead, as users pin jobs from other website, we can gather all the entrance and have a bottom-to-top list of job postings that works for international students.</p> -->
+      <blockquote class="quote"><span class="quote-text">We redefined our goals: to facilitate users' applications on existing platforms and help them to manage the job hunting process. The browser extension is essential to achieve the new goal.</span>
+      </blockquote>
+<!--       <blockquote class="quote"><span class="quote-text">The new platform works like a job "Pinterest". As users viewing jobs online, they are able to check the work authorization information at any time. By "Pin" the job, they could manage interested job postings at our platform.</span>
+      </blockquote> -->
+      <p class="proj-text">The new platform works like a job "Pinterest". As users viewing jobs online, they are able to check the work authorization information at any time. By "Pin" the job, they could manage interested job postings at our platform.</p>
+<!--       <blockquote class="quote quote-large">Being supportive!</blockquote>
+ -->      <div class="witus-background-box"><img sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" src="images/new-model.png" srcset="images/new-model-p-500x335.png 500w, images/new-model-p-800x535.png 800w, images/new-model-p-1080x722.png 1080w, images/new-model.png 1448w">
       </div>
       <div class="proj-pic-title">- The New Model of Our Platform -</div>
-      <h4 class="proj-section-title">Prototype</h4>
-      <blockquote class="quote"><span class="quote-text">From mid-fi to high-fi, we iterated the idea to be a working system.</span>
+      <h4 class="proj-section-title">Test the New Approach</h4>
+      <blockquote class="quote"><span class="quote-text">Is the new idea in a right direction? Is the information architecture and interface easily understandable?</span>
       </blockquote>
-      <p class="proj-text">Now, the most important problem becomes: what are the usability problems behind our interface? We sit down as a group and conducted a <span class="proj-highlight">Heuristic Evaluation </span>using Nielsen's 10 heuristics for user interface design.</p>
+      <p class="proj-text">Considering the time limitation, we decided to create a higher fidelity prototype using Balsamiq to test if our new approach is in the right direction and the basic information archintecture together.</p>
       <div class="w-row witus-ia-row">
         <div class="w-col w-col-6 witus-column"><img class="witus-ia-img" sizes="(max-width: 767px) 67vw, (max-width: 991px) 261.796875px, 336px" src="images/Screen-Shot-2017-01-13-at-11.20.00-PM.png" srcset="images/Screen-Shot-2017-01-13-at-11.20.00-PM-p-500x321.png 500w, images/Screen-Shot-2017-01-13-at-11.20.00-PM-p-800x513.png 800w, images/Screen-Shot-2017-01-13-at-11.20.00-PM-p-1080x692.png 1080w, images/Screen-Shot-2017-01-13-at-11.20.00-PM-p-1600x1025.png 1600w, images/Screen-Shot-2017-01-13-at-11.20.00-PM.png 1656w">
           <p class="label proj-text">Browser Extension</p><img class="witus-ia-img" sizes="(max-width: 767px) 67vw, (max-width: 991px) 261.796875px, 336px" src="images/Screen-Shot-2017-01-13-at-11.19.43-PM.png" srcset="images/Screen-Shot-2017-01-13-at-11.19.43-PM-p-500x321.png 500w, images/Screen-Shot-2017-01-13-at-11.19.43-PM-p-800x513.png 800w, images/Screen-Shot-2017-01-13-at-11.19.43-PM-p-1080x692.png 1080w, images/Screen-Shot-2017-01-13-at-11.19.43-PM-p-1600x1025.png 1600w, images/Screen-Shot-2017-01-13-at-11.19.43-PM.png 1656w">
@@ -224,8 +233,20 @@
         </div>
       </div>
       <div class="proj-pic-title">- Mid-fidelity Prototype -</div>
-      <p class="proj-text">Based on the result of heuristic evaluation, we improved detailed-level interaction and visual design and created a<span class="proj-highlight"> high-fidelity prototype.</span>
+      <p class="proj-text">We tested the prototyple with 5 users. They were all excited about being able to check work authorization information through the browser extension anytime. They also understood the information architecture of "Browser Extension - Personal Board - Public Board". Their concerns about the platform were:   
       </p>
+      <ol class="proj-list">
+        <li class="proj-list-item"><span class="proj-highlight">"People may be unwilling to share job opportunities to other candidates. In this case, the public board doesn't make sense."<br xmlns="http://www.w3.org/1999/xhtml"></span>
+        <span class="witus-ia-conclusion">The ideas of pinning to the public board and crowdsourcing the E-Verify and sponsorship information are based on building a community where people help each other. How do we design to encourage people to contribute to the community?</span>
+        </li>
+        <li class="proj-list-item"><span class="proj-highlight">"How can I trust the vote for E-Verify? They can be out-dated and wrong."<br xmlns="http://www.w3.org/1999/xhtml"></span><span class="witus-ia-conclusion">We decided to have users write comments and provide details about their information sources instead of having them to vote.</span>
+        </li>
+      </ol>
+      <p class="proj-text">The Balsamiq prototype was not enough for testing the detailed interactions. We created a high fidelity prototype to test the interactions.  
+      </p>
+      <h4 class="proj-section-title">High-fidelity Prototype</h4>
+      <blockquote class="quote"><span class="quote-text">Exploration of the main features go in this phase.</span>
+      </blockquote>
       <div class="witus-background-box">
           <div class="w-embed w-video" style="padding-top: 56.17021276595745%;">
         <iframe class="embedly-embed" src="https://www.youtube.com/embed/wElHv0cLQV4" scrolling="no" frameborder="0" allowfullscreen=""></iframe>
