--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div class="intro-section">
     <div class="intro-container w-container">
       <h1 class="introemoji">🎉</h1>
-        <h1 class="intro-text1">I am an innovative problem-solver, an active user advocator, and a versatile design implementer.</h1>
+        <h1 class="intro-text1">Solve complex problems with delightful experiences.</h1>
         <p class="intro-text2">Hi, I'm Qinwei! I’m a master's student majoring in <span class="intro-highlight">Information Science</span> at <span class="intro-highlight">Cornell University</span>. I interned at <span class="intro-highlight">IBM</span> and as a UX designer and I am working as an student designer for a <span class="intro-highlight">Cornell startup</span>. I'm currently <span class="intro-highlight">looking for a full-time position as a product designer</span>.</p> 
       <p class="section-title">------
                       <a class="anchor" id="project-anchor"></a>
@@ -61,7 +61,7 @@
       <div class="w-col w-col-1"></div>
       <div class="w-col w-col-5"><img class="project1-img" src="images/Group-11.png">
       </div>
-      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="witus.html"><h3 class="project-heading">WITUS&nbsp;</h3><p class="project-description">I designed user-centered web application to help international students find work authorization information.</p></a><a class="project-button w-button" href="witus.html">Read more</a>
+      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="witus.html"><h3 class="project-heading">WITUS&nbsp;</h3><p class="project-description">A browser extension to help international students manage their job hunting in the USA.</p></a><a class="project-button w-button" href="witus.html">Read more</a>
       </div>
       <div class="w-col w-col-1"></div>
     </div>
@@ -71,7 +71,8 @@
       <div class="w-col w-col-1"></div>
       <div class="w-col w-col-5"><img class="project1-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/fitcat.png" srcset="images/fitcat-p-500x307.png 500w, images/fitcat-p-800x491.png 800w, images/fitcat-p-1080x662.png 1080w, images/fitcat-p-1600x981.png 1600w, images/fitcat-p-2000x1226.png 2000w, images/fitcat-p-2600x1594.png 2600w, images/fitcat.png 2878w">
       </div>
-      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="fitcat.html"><h3 class="project-heading">Fitcat 2.0</h3><p class="project-description">I executed detailed-level interaction design and applied metaphors to make the app easy to understand.</p></a><a class="project-button w-button" href="fitcat.html">Read more</a>
+      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="fitcat.html"><h3 class="project-heading">Fitcat 2.0</h3><p class="project-description">An iOS application to help cat owners solve the problem of cat obesity.</p></a>
+      <a class="project-button w-button" href="fitcat.html">Read more</a>
       </div>
       <div class="w-col w-col-1"></div>
     </div>
@@ -81,7 +82,7 @@
       <div class="w-col w-col-1"></div>
       <div class="w-col w-col-5"><img class="project1-img" sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 991px) 40vw, 41vw" src="images/Kitchem.png" srcset="images/Kitchem-p-500x291.png 500w, images/Kitchem-p-800x465.png 800w, images/Kitchem-p-1080x628.png 1080w, images/Kitchem-p-1600x930.png 1600w, images/Kitchem.png 1927w">
       </div>
-      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="kitchem.html"><h3 class="project-heading">Kitchem</h3><p class="project-description">I researched on how concrete instructions can improve learning, using an educational game I designed to teach chemical equation balancing.</p></a><a class="project-button w-button" href="kitchem.html">Read more</a>
+      <div class="w-col w-col-5"><a class="project-link w-inline-block" href="kitchem.html"><h3 class="project-heading">Kitchem</h3><p class="project-description">A research on how concrete instructions could facilitate learning abstract concepts.</p></a><a class="project-button w-button" href="kitchem.html">Read more</a>
       </div>
       <div class="w-col w-col-1"></div>
     </div>
