about page changes

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
       <div class="w-row">
         <div class="circle-column1 w-col w-col-7">
           <blockquote class="quote-text">How I see myself</blockquote>
-          <p class="about-intro">Just like those concentric circles! The outside me is active. I like springboard diving, hip hop dancing, photography and film creation.
+          <p class="about-intro">The outside me is active. I like springboard diving, hip hop dancing, photography and film creation.
             <br>The middle me is contemplative. I observe, communicate, think, reflect, and solve problems.
             <br>The inner me, I keep solid and simple. It is my sincere desire to serve the great and bring happiness to people.</p>
         </div>
@@ -70,9 +70,9 @@
       </div>
       <div class="w-row">
         <div class="circle-column1 w-col w-col-7">
-          <blockquote class="quote-text">How I see design</blockquote>
-          <p class="about-intro">People get to know a design by it's functionality and appearance. They use it when the design solves their problem or meets their needs. However, they love it only when the value it brings is communicated.
-            <br>I aspire to design experience that thrives from the function to the value.</p>
+          <blockquote class="quote-text">How I see product design</blockquote>
+          <p class="about-intro">People get to know a product by it's functionality and appearance. <br>People use a product when the design solves their problems.<br> People have faith in a product when it cast an inspiring version of the future.
+          </p>
         </div>
         <div class="circle-column2 w-col w-col-5">
           <div class="about-square-l">
